# servo

components/devtools/: Cargo.toml  actor.rs  lib.rs
components/devtools/actors/: console.rs  framerate.rs  inspector.rs  memory.rs  network_event.rs  root.rs  tab.rs  timeline.rs
components/devtools_client/: Cargo.toml  lib.rs  main.rs
components/devtools_msg/: Cargo.toml  lib.rs  protocol.rs
components/plugins/: lib.rs
components/servo/: Cargo.toml  main.rs
python/servo/: build_commands.py  testing_commands.py
tests/devtools/: Cargo.toml  harness.rs  lib.rs  tests.rs
