[package]

name = "devtools_client"
version = "0.0.1"
authors = ["The Servo Project Developers"]

[lib]
name = "devtools_client"
path = "lib.rs"
crate-type = ["rlib"]

[dependencies.devtools_msg]
path = "../devtools_msg"

[dependencies.devtools_traits]
path = "../devtools_traits"

[dependencies]
time = "*"
rustc-serialize = "0.3"
url = "*"
