[package]
name = "devtools_tests"
version = "0.0.1"
authors = ["The Servo Project Developers"]

[lib]
name = "devtools_tests"
path = "lib.rs"
doctest = false

[features]
default = ["glutin_app", "window"]
window = ["glutin_app/window"]
headless = ["glutin_app/headless"]

[dependencies.devtools]
path = "../../../components/devtools"

[dependencies.devtools_traits]
path = "../../../components/devtools_traits"

[dependencies.devtools_msg]
path = "../../../components/devtools_msg"

[dependencies.servo]
path = "../../../components/servo"

[dependencies.util]
path = "../../../components/util"

[dependencies.util]
path = "../../../components/compositing"

[dependencies.glutin_app]
path = "../../ports/glutin"
optional = true

[dependencies]
url = "*"
