[package]
name = "devtools_tests"
version = "0.0.1"
authors = ["The Servo Project Developers"]

[lib]
name = "devtools_tests"
path = "lib.rs"
doctest = false

[dependencies.servo]
path = "../../../components/servo"

[dependencies.devtools]
path = "../../../components/devtools"

[dependencies.devtools_traits]
path = "../../../components/devtools_traits"

[dependencies.devtools_msg]
path = "../../../components/devtools_msg"

[dependencies.devtools_client]
path = "../../../components/devtools_client"

[dependencies.util]
path = "../../../components/util"

[dependencies]
url = "*"
